# flexsim_mcp

./: .gitignore  README.md  pyproject.toml
src/flexsim_mcp/: __init__.py  example.py
